--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,7 @@ h1,h2,h3,h4,h5,h6,p {
 
 .works-title {
     margin-bottom: 4px;
+    margin-left: 24px;
 
     font-size: 18px;
     font-weight: 700;
@@ -443,7 +444,8 @@ h1,h2,h3,h4,h5,h6,p {
 }
 
 .works-descr {
-margin-bottom: 20px;
+    margin-bottom: 20px;
+    margin-left: 24px;
 
     font-size: 16px;
     line-height: 1.9;
